tests/sksl/errors/golden/OverflowParamArraySize.glsl
### Compilation failed:

error: 1: array size is too large: 4294967296
1 error
